<resources>
    <string name="app_name">Electoral Commission</string>
    <string name="search_hint">Search</string>
    <string name="news">News</string>
    <string name="vote">Vote</string>
    <string name="Mission" />
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="goal">Goal</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="tollfree">Toll Free</string>
    <string name="gallery">Gallery</string>
    <string name="about_electoral_commission">About Electoral Commission</string>
    <string name="parties">Political Parties</string>
    <string name="name">Political Party</string>
    <string name="representative">Representative</string>
    <string name="date">Date of Registration</string>
    <string name="party">Party</string>
    <string name="voter_checker_info">Enter your National Identification Number to find out if you are registered to vote</string>
    <string name="nin">National Identification Number</string>
    <string name="check">CHECK</string>
    <string name="voter_checker">Voter Checker</string>
    <string name="home">Home</string>
    <string name="picture">Picture</string>
</resources>
