<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/partyListFragment">

    <fragment
        android:id="@+id/roadmapFragment"
        android:name="com.lokech.electoralcommission.vote.VoteFragment"
        android:label="Roadmap"
        tools:layout="@layout/fragment_vote" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.lokech.electoralcommission.info.InfoFragment"
        android:label="@string/app_name"
        tools:layout="@layout/view_pager" />
    <fragment
        android:id="@+id/pictureListFragment"
        android:name="com.lokech.electoralcommission.gallery.PictureListFragment"
        android:label="@string/gallery"
        tools:layout="@layout/picture_list" />
    <fragment
        android:id="@+id/partyListFragment"
        android:name="com.lokech.electoralcommission.parties.PartyListFragment"
        android:label="@string/parties"
        tools:layout="@layout/party_list">
        <action
            android:id="@+id/action_partyListFragment_to_partyFragment"
            app:destination="@id/partyFragment" />
    </fragment>
    <fragment
        android:id="@+id/partyFragment"
        android:name="com.lokech.electoralcommission.parties.PartyFragment"
        android:label="@string/party"
        tools:layout="@layout/fragment_party">
        <argument
            android:name="partyId"
            app:argType="string" />
    </fragment>


</navigation>