<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_normal"
        android:paddingTop="24dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="263dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ec" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/voter_checker"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="@dimen/spacing_normal"
            android:text="@string/voter_checker_info"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="NIN"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/forgot_financeEmail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edit_text"
            android:cursorVisible="true"

            android:drawablePadding="5dp"
            android:hint="@string/nin"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textCursorDrawable="@null" />


        <Button
            android:id="@+id/btn_checker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_xml_btn_yellow"
            android:text="@string/check"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>
</layout>